# AdventOfCodeSolutions

./: .gitignore  Common.hs  README.md  day1.hs  day3.hs  run.sh  run_optimized.sh
2019/: Intcode.hs  day1.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs
2020/: day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  run.sh
2022/: src.cpp
2024/: CMakeLists.txt  main.cpp  src.cpp
2024/days/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
2024/include/: common.hpp
advenths/: Common.hs
advenths/2019/: day3.hs  day4.hs  day6.hs
advenths/2020/: day10.hs  day11.hs  day12.hs  day9.hs
advenths/extras/2019_day1_min_allocs/: compile.sh
extras/2019_day1_min_allocs/: .gitignore  2019_day1_min_allocs.cpp  day1_min_allocs
rust/rust_2021/src/: main.rs
